# server/config/swagger.yaml
@@ -16,7 +16,7 @@ tags:
   - name: Articles
     description: Some list
 paths:
-  /api/list:
+  /api/articles:
     get:
       tags:
         - Articles
@@ -34,7 +34,35 @@ paths:
                   $ref: '#/components/schemas/Article'
         '400':
           description: bad input parameter
-  /api/list/{id}:
+    post:
+      tags:
+        - Articles
+      summary: add new article
+      operationId: addArticle
+      description: Add new article
+      responses:
+        '201':
+          description: item created
+        '400':
+          description: 'invalid input, object invalid'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Article'
+        description: Article to add
+    delete:
+      tags:
+        - Articles
+      summary: delete all articles
+      operationId: deleteArticles
+      description: Delete all articles
+      responses:
+        '200':
+          description: items deleted
+        '400':
+          description: bad input parameter
+  /api/articles/{id}:
     get:
       tags:
         - Articles
@@ -60,24 +88,48 @@ paths:
                   $ref: '#/components/schemas/Article'
         '400':
           description: bad input parameter
-  /api/create-article:
-    post:
+    put:
       tags:
         - Articles
-      summary: add new article
-      operationId: addArticle
-      description: Add new article
+      summary: changes article by id
+      operationId: changeArticleByID
+      parameters:
+        - name: id
+          in: path
+          description: ID of article to return
+          required: true
+          schema:
+            type: integer
+            format: int64
+      description: change article by ID
       responses:
-        '201':
-          description: item created
+        '200':
+          description: change article matching criteria
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Article'
         '400':
-          description: 'invalid input, object invalid'
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Article'
-        description: Article to add
+          description: bad input parameter
+    delete:
+      tags:
+        - Articles
+      summary: deletes article by id
+      operationId: deleteArticleByID
+      description: delete article by ID
+      responses:
+        '200':
+          description: deleted article matching criteria
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Article'
+        '400':
+          description: bad input parameter
 components:
   schemas:
     Article:
